err/ztq-worker.err
Listing '.'...
Listing './bin'...
Listing './config'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/hiredis'...
Listing './lib/python3.5/site-packages/hiredis-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psutil'...
Listing './lib/python3.5/site-packages/psutil/tests'...
Listing './lib/python3.5/site-packages/psutil-5.4.3.egg-info'...
Listing './lib/python3.5/site-packages/redis'...
Listing './lib/python3.5/site-packages/redis-2.10.6.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/test'...
Compiling './lib/python3.5/site-packages/test/test.py'...
***   File "./lib/python3.5/site-packages/test/test.py", line 8
    print 'hello'
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/test/test_list.py'...
***   File "./lib/python3.5/site-packages/test/test_list.py", line 19
    print get_redis(system='default').lrem('list', 0, 'hello')
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/transaction'...
Listing './lib/python3.5/site-packages/transaction/tests'...
Listing './lib/python3.5/site-packages/transaction-2.1.2.dist-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './lib/python3.5/site-packages/ztq_core'...
Compiling './lib/python3.5/site-packages/ztq_core/demo.py'...
***   File "./lib/python3.5/site-packages/ztq_core/demo.py", line 9
    print 'START: ', body
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ztq_core/redis_wrap.py'...
***   File "./lib/python3.5/site-packages/ztq_core/redis_wrap.py", line 35
    except ConnectionError, e:
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ztq_core/task.py'...
***   File "./lib/python3.5/site-packages/ztq_core/task.py", line 163
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ztq_core-1.2.5.egg-info'...
Listing './lib/python3.5/site-packages/ztq_worker'...
Compiling './lib/python3.5/site-packages/ztq_worker/command_thread.py'...
***   File "./lib/python3.5/site-packages/ztq_worker/command_thread.py", line 58
    except ztq_core.ConnectionError, e:
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ztq_worker/job_thread.py'...
***   File "./lib/python3.5/site-packages/ztq_worker/job_thread.py", line 86
    except ztq_core.ConnectionError, e:
                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ztq_worker/system_info'...
Compiling './lib/python3.5/site-packages/ztq_worker/system_info/linux.py'...
***   File "./lib/python3.5/site-packages/ztq_worker/system_info/linux.py", line 75
    print 'cpu style: %s' % get_cpu_style()
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ztq_worker/system_info/win.py'...
***   File "./lib/python3.5/site-packages/ztq_worker/system_info/win.py", line 49
    print 'cpu style: %s' % get_cpu_style()
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ztq_worker-1.3.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
